--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-	<title>{{site.projectName}} by {{site.author}}</title>
+	<title>{{site.name}} by {{site.author}}</title>
   
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/pygment_trac.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -14,13 +15,16 @@
 <body>
 	<div class="wrapper">
   <header id="nav">
-    <h1>{{site.projectName}}</h1>
-    <p>{{site.description}}</p>
-    
-    <ul class='sections'></ul>
+    <h4><a href='http://antjs.org'>Ant.js</a></h4>
+    <ul class='sections'>
+      <li>» <a href="https://github.com/antjs/ant.js">Github 上的 ant.js</a></li>
+      <li>» <a href="learn">学习 ant.js</a></li>
+    </ul>
+    <ul class='sections'>{{{nav}}}</ul>
   </header>
   <section id="content">
-    {{content}}
+    <h1>Ant.js</h1>
+    {{{content}}}
   </section>
   <footer>
     
@@ -36,5 +40,16 @@
     ga('send', 'pageview');
 
   </script>
+  <script>
+  if(/firefox/i.test(navigator.userAgent)){
+    var links = document.getElementById('nav').getElementsByTagName('a');
+    for(var i = 0, l = links.length; i < l; i++){
+      if(links[i].href.indexOf('#') >= 0){
+        links[i].href = '#' + encodeURIComponent(links[i].getAttribute('href').slice(1));
+      }
+    }
+  }
+  </script>
+  <script src="dist/ant.min.js"></script>
 </body>
 </html>
