--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-	<title>{{site.name}} by {{site.author}}</title>
+	<title>Ant.js - 轻量级 MDV</title>
   
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/pygment_trac.css">
@@ -15,7 +15,7 @@
 <body>
 	<div class="wrapper">
   <header id="nav">
-    <h4><a href='http://antjs.org'>Ant.js</a></h4>
+    <h4><a href='http://antjs.org'>Ant.js <span class='version'>({{site.version}})</span></a></h4>
     <ul class='sections'>
       <li>» <a href="https://github.com/antjs/ant.js">Github 上的 ant.js</a></li>
       <li>» <a href="learn">学习 ant.js</a></li>
@@ -23,7 +23,7 @@
     <ul class='sections'>{{{nav}}}</ul>
   </header>
   <section id="content">
-    <h1>Ant.js</h1>
+    <h1>Ant.js <span class='version'>({{site.version}})</span></h1>
     {{{content}}}
   </section>
   <footer>
