--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <script src="src/ant-es5-shim.js"></script>
   <![endif]-->
 </head>
 <body>
