--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,9 @@ a {
 
 #nav {
   position: fixed;
+  _position: absolute;
   top: 0;
+  left: 0;
   height: 100%;
   overflow-y: auto;
   width: 250px;
