--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,13 @@
 <head>
 	<meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-	<title>Ant.js - 轻量级 HTML 增强框架</title>
+	<title>Ant.js - 轻量级 HTML 增强</title>
   
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/pygment_trac.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <script src="src/ant-es5-shim.js"></script>
   <![endif]-->
 </head>
 <body>
