--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-	<title>Ant.js - 轻量级 HTML 增强</title>
+	<title>Ant.js - 轻量级 HTML 数据驱动框架</title>
   
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/pygment_trac.css">
