--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
 	<title>Ant.js - 轻量级 HTML 数据驱动框架</title>
   
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/pygment_trac.css">
+  <link rel="stylesheet" href="docs/css/styles.css">
+  <link rel="stylesheet" href="docs/css/pygment_trac.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
