--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -18,7 +18,7 @@
     <h4><a href='http://antjs.org'>Ant.js <span class='version'>({{site.version}})</span></a></h4>
     <ul class='sections'>
       <li>» <a href="https://github.com/antjs/ant.js">Github 上的 ant.js</a></li>
-      <li>» <a href="learn">学习 ant.js</a></li>
+      <!-- <li>» <a href="learn">学习 ant.js</a></li> -->
     </ul>
     <ul class='sections'>{{{nav}}}</ul>
   </header>
