--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,7 +3,12 @@
 <head>
 	<meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-	<title>Ant.js - 轻量级 HTML 数据驱动框架</title>
+  <meta name=keywords content="template, data binding, two way binding, mdv, javascript, 双向绑定, 模板">
+  <meta name=description content="{{site.description}}">
+  <meta property="og:title" content="Ant.js" />
+  <meta property="og:description" content="{{site.description}}" />
+  <meta property="og:url" content="http://antjs.org" />
+	<title>Ant.js - 数据驱动 HTML 模板</title>
   
   <link rel="stylesheet" href="docs/css/styles.css">
   <link rel="stylesheet" href="docs/css/pygment_trac.css">
