--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,7 +7,7 @@
   <meta name=description content="{{site.description}}">
   <meta property="og:title" content="Ant.js" />
   <meta property="og:description" content="{{site.description}}" />
-  <meta property="og:url" content="http://antjs.org" />
+  <meta property="og:url" content="http://antjs.github.io/ant.js" />
 	<title>Ant.js - 数据驱动 HTML 模板</title>
   
   <link rel="stylesheet" href="docs/css/styles.css">
@@ -20,7 +20,7 @@
 <body>
 	<div class="wrapper">
   <header id="nav">
-    <h4><a href='http://antjs.org'>Ant.js <span class='version'>({{site.version}})</span></a></h4>
+    <h4><a href='http://antjs.github.io/ant.js'>Ant.js <span class='version'>({{site.version}})</span></a></h4>
     <ul class='sections'>
       <li>» <a href="https://github.com/antjs/ant.js">Github 上的 ant.js</a></li>
       <!-- <li>» <a href="learn">学习 ant.js</a></li> -->
@@ -41,7 +41,7 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-12642431-6', 'antjs.org');
+    ga('create', 'UA-12642431-6', 'antjs.github.io');
     ga('send', 'pageview');
 
   </script>
